packages/frontend/src/app/app.component.scss
:host {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  height: 100vh;
}

.container {
  width: 60%;
  margin: 0 20%;
  padding: 1rem;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  flex: 1 0 auto;
}

.flag {
  height: 1rem;
  cursor: pointer;
}

@media (max-width: 1200px) {
  .container {
    width: 90%;
    margin: 0 5%;
  }
}

@media (max-width: 1000px) {
  .container {
    width: 100%;
    padding: 1rem;
    margin: 0;
  }
}

@media (min-width: 2000px) {
  .container {
    width: 50%;
    margin: 0 25%;
  }
}


h2 {
  text-align: center;
}

footer {
  flex-shrink: 0;
  padding: 1rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

footer .footer-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}

footer .footer-container>* {
  display: inline-flex;
  align-items: center;
}

